--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Learn TailwindCSS</title>
     <link rel="shortcut icon" href="/favicon/likelion.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon/likelion.svg" type="image/svg" />
     <link rel="preload" as="font" href="/font/suit/SUIT-Variable.woff2" />
@@ -12,8 +11,12 @@
     <script type="module" src="/src/main.js"></script>
   </head>
   <body>
-    <a href="/index.html">메인 페이지 이동</a>
-    <br />
-    <h1></h1>
+    <h1 class="text-3xl font-bold underline">Vite + Tailwind CSS</h1>
+    <ul>
+      <li><a href="./src/core/01-utility-classes.html">유틸리티 클래스</a></li>
+      <li><a href="./src/core/02-state-design.html">상태 디자인</a></li>
+      <li><a href="./src/core/03-dark-mode.html">다크모드</a></li>
+      <li><a href="./src/core/04-theme-variable.html">테마변수</a></li>
+    </ul>
   </body>
 </html>
